force-app/main/default/objects/Campaign_Promotion__c/Campaign_Promotion__c.object-meta.xml
<CustomObject>
    <label>Campaign Promotion</label>
    <nameField>
        <displayFormat>PRO-{0000000}</displayFormat>
        <label>Campaign Promotion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Promotions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>