force-app/main/default/objects/Campaign_Promotion__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Promotions</relationshipLabel>
    <relationshipName>Campaign_Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>