force-app/main/default/objects/Campaign_Promotion__c/fields/Promotion_Amount__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Amount__c</fullName>
    <label>Promotion Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>