force-app/main/default/objects/Campaign_Promotion__c/fields/Promotion_End__c.field-meta.xml
<CustomField>
    <fullName>Promotion_End__c</fullName>
    <label>Promotion End</label>
    <type>Date</type>
</CustomField>