force-app/main/default/objects/Campaign_Promotion__c/fields/Promotion_Start__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Start__c</fullName>
    <label>Promotion Start</label>
    <type>Date</type>
</CustomField>