force-app/main/default/objects/Campaign_Promotion__c/fields/Promotion_Type__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Type__c</fullName>
    <label>Promotion Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Rebate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>