force-app/main/default/objects/Campaign_Promotion__c/fields/Promotion_Value_Type__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Value_Type__c</fullName>
    <label>Promotion Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>