force-app/main/default/objects/Campaign_Promotion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Account__c</columns>
    <columns>Promotion_Type__c</columns>
    <columns>Promotion_Start__c</columns>
    <columns>Promotion_End__c</columns>
    <columns>Promotion_Value_Type__c</columns>
    <columns>Promotion_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>